# artigraph

./: .envrc  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  .trufflehog_ignore.txt  404.html  Brewfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  dashboard.py  index.html  pyproject.toml  setup.cfg  sitemap.xml
.github/: dco.yaml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml  codeql-analysis.yaml  codeql-analysis.yml  dependabot-auto-approve.yaml  publish-docs.yaml  repolinter.yaml  tests.yaml  weekly-analysis.yaml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
GOVERNANCE/: index.html
SECURITY/: index.html
SUPPORT/: index.html
docs/: example.py
docs/examples/spend/: .gitignore  Dockerfile  demo.py  push.sh
docs/examples/spend/transactions/: 1970-01-01.json  1970-01-02.json
examples/: dashboard.py
reference/arti/: index.html
reference/arti/annotations/: index.html
reference/arti/artifacts/: index.html
reference/arti/backends/: index.html
reference/arti/backends/memory/: index.html
reference/arti/executors/: index.html
reference/arti/executors/local/: index.html
reference/arti/fingerprints/: index.html
reference/arti/formats/: index.html
reference/arti/formats/json/: index.html
reference/arti/formats/pickle/: index.html
reference/arti/graphs/: index.html
reference/arti/internal/: index.html
reference/arti/internal/dispatch/: index.html
reference/arti/internal/models/: index.html
reference/arti/internal/patches/: index.html
reference/arti/internal/type_hints/: index.html
reference/arti/internal/utils/: index.html
reference/arti/io/: index.html
reference/arti/io/json_gcsfile_python/: index.html
reference/arti/io/json_localfile_python/: index.html
reference/arti/io/json_stringliteral_python/: index.html
reference/arti/io/pickle_gcsfile_python/: index.html
reference/arti/io/pickle_localfile_python/: index.html
reference/arti/partitions/: index.html
reference/arti/producers/: index.html
reference/arti/statistics/: index.html
reference/arti/storage/: index.html
reference/arti/storage/literal/: index.html
reference/arti/storage/local/: index.html
reference/arti/thresholds/: index.html
reference/arti/types/: index.html
reference/arti/types/bigquery/: index.html
reference/arti/types/numpy/: index.html
reference/arti/types/pandas/: index.html
reference/arti/types/pyarrow/: index.html
reference/arti/types/pydantic/: index.html
reference/arti/types/python/: index.html
reference/arti/versions/: index.html
reference/arti/views/: index.html
reference/arti/views/python/: index.html
search/: search_index.json
src/arti/: __init__.py
src/arti/annotations/: README.md  __init__.py  core.py
src/arti/artifacts/: README.md  __init__.py  core.py
src/arti/backends/: README.md  __init__.py  core.py  memory.py  neo4j.py
src/arti/dashboards/: __init__.py
src/arti/executors/: __init__.py  local.py
src/arti/fingerprints/: README.md  __init__.py  core.py
src/arti/formats/: README.md  __init__.py  core.py  json.py  pickle.py
src/arti/graphs/: README.md  __init__.py  core.py
src/arti/internal/: __init__.py  dispatch.py  mappings.py  models.py  mypy_plugin.py  patches.py  pointers.py  type_hints.py  utils.py
src/arti/io/: __init__.py  core.py  json_gcsfile_python.py  json_localfile_python.py  json_stringliteral_python.py  pickle_gcsfile_python.py  pickle_localfile_python.py
src/arti/partitions/: __init__.py  core.py
src/arti/producers/: README.md  __init__.py  core.py
src/arti/statistics/: __init__.py  core.py
src/arti/storage/: __init__.py  _internal.py  core.py  literal.py  local.py
src/arti/storage/google/cloud/: storage.py
src/arti/thresholds/: __init__.py  core.py
src/arti/types/: README.md  __init__.py  bigquery.py  core.py  numpy.py  pandas.py  pyarrow.py  pydantic.py  python.py  sgqlc.py
src/arti/versions/: README.md  __init__.py  core.py
src/arti/views/: README.md  __init__.py  core.py  python.py
stubs/: box.pyi  farmhash.pyi  multimethod.pyi  parse.pyi
stubs/frozendict/: core.pyi
stubs/sgqlc/types/: __init__.pyi
tests/: conftest.py
tests/arti/: dummies.py  test_fingerprints.py  test_thresholds.py  test_version.py
tests/arti/artifacts/: test_artifact.py
tests/arti/backends/: test_backend.py  test_neo4j.py
tests/arti/graphs/: test_graph.py
tests/arti/internal/: test_dispatch.py  test_internal.py  test_mappings.py  test_models.py  test_pointers.py  test_type_hints.py  test_utils.py
tests/arti/internal/import_submodules_test_modules/: __init__.py
tests/arti/internal/import_submodules_test_modules/sub/: b.py
tests/arti/io/: test_gcs_io.py  test_literal_io.py  test_localfile_io.py
tests/arti/partitions/: test_partitions.py
tests/arti/producers/: test_producer.py
tests/arti/storage/: test_gcs_storage.py  test_literal_storage.py  test_local_storage.py  test_storage.py  test_storage_internal.py
tests/arti/types/: test_bigquery_adapters.py  test_numpy_adapters.py  test_pandas_adapters.py  test_pyarrow_adapters.py  test_pydantic_adapters.py  test_python_adapters.py  test_sgqlc_adapters.py  test_types.py
tests/arti/versions/: test_version.py
tests/arti/views/: test_python.py  test_views.py
tsc/: README.md
tsc/meetings/: README.md
