[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']


[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplemented",
    "raise NotImplementedError",
]
fail_under = 100
skip_covered = true

[tool.coverage.run]
source = ["arti"]
branch = true


[tool.isort] # Black compatible config
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true


[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/stubs"
namespace_packages = true
strict = true


[tool.poetry]
name = "arti"
version = "0.0.1"
description = ""
authors = ["Replica"]
include = ["src/arti/py.typed"]

[tool.poetry.dependencies]
deprecation = "^2.1.0"
frozendict = "^2.1.0"
multimethod = "^1.6"
parse = "^1.19.0"
pydantic = "^1.8.1"
pyfarmhash = "^0.2.2"
python = "^3.9"
python-box = "^5.4.1"
sgqlc = "^14.1"
types-pyfarmhash = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "21.11b1"
coverage = {version = "^6.2", extras = ["toml"]} # pyproject.toml support
flake8 = "4.0.1"
ipdb = "^0.13.9"
ipython = "^7.30.0"
isort = "5.10.1"
mypy = "0.910"
pre-commit = "2.15.0"
pylint = "^2.11.1"
pytest = "6.2.5"
pytest-benchmark = "3.4.1"
pytest-black = "0.3.12"
pytest-cov = "3.0.0"
pytest-flake8 = "1.0.7"
pytest-isort = "2.0.0"
pytest-mypy = "0.8.1"
pytest-sugar = "0.9.4"
sh = "^1.14.2"
typer = "^0.4.0"


[tool.pylint.format]
max-line-length = "100"

[tool.pylint.master]
extension-pkg-whitelist = [
    "farmhash",
    "pydantic",
]

[tool.pylint.message_control]
docstring-min-length=10
disable = """
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    no-self-use,
    redefined-builtin,
    too-few-public-methods,
    unsubscriptable-object,
"""


[tool.pytest.ini_options]
addopts = "--black --cov --cov-report=term-missing --flake8 --isort --mypy --no-cov-on-fail "
filterwarnings = [
    "error",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning:flake8"
]
testpaths = [
    "src/",
    "tests/",
]
