[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']


[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplemented",
    "raise NotImplementedError",
]
fail_under = 100
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["src/arti/internal/vendored/*" ]
source = ["arti"]


[tool.isort]
line_length = 100
profile = "black"


[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/stubs"
namespace_packages = true
strict = true

[[tool.mypy.overrides]]
module = ["sh", ]
ignore_missing_imports = true


[tool.poetry]
name = "arti"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["Jacob Hayes <jacob.r.hayes@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/artigraph/artigraph"
repository = "https://github.com/artigraph/artigraph"
include = ["src/arti/py.typed"]

[tool.poetry.dependencies]
frozendict = "^2.1.0"
multimethod = "^1.6"
parse = "^1.19.0"
pydantic = "^1.9.0"
pyfarmhash = ">=0.2.2,<0.4.0"
python = "^3.9"
python-box = "^5.4.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "22.1.0"
blacken-docs = "^1.12.1"
coverage = {version = "^6.3", extras = ["toml"]} # pyproject.toml support
flake8 = "4.0.1"
ipdb = "^0.13.9"
ipython = "^8.1.1"
isort = "5.10.1"
mypy = "0.940"
pdocs = {git = "https://github.com/JacobHayes/pdocs.git", rev = "master"} # Fix GenericAlias error https://github.com/timothycrosley/pdocs/pull/29
portray = "^1.7.0"
pre-commit = "2.17.0"
pylint = "^2.12.2"
pytest = "6.2.5"
pytest-benchmark = "3.4.1"
pytest-black = "0.3.12"
pytest-cov = "3.0.0"
pytest-flake8 = "1.1.0"
pytest-isort = "3.0.0"
pytest-mypy = "0.9.1"
pytest-sugar = "0.9.4"
pyupgrade = "^2.31.1"
sh = "^1.14.2"
truffleHog = "^2.2.1"
typer = "^0.4.0"
types-pyfarmhash = "^0.2.3"


[tool.portray.mkdocs]
edit_uri = 'edit/golden/'


[tool.pylint.format]
max-line-length = "100"

[tool.pylint.master]
extension-pkg-whitelist = [
    "farmhash",
    "pydantic",
]

[tool.pylint.message_control]
docstring-min-length=10
disable = """
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    no-self-use,
    redefined-builtin,
    too-few-public-methods,
    unsubscriptable-object,
"""

[tool.pylint.TYPECHECK]
generated-members="sh"


[tool.pytest.ini_options]
addopts = "--black --cov --cov-report=term-missing --flake8 --isort --mypy --no-cov-on-fail "
filterwarnings = [
    "error",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning:flake8"
]
testpaths = [
    "src/",
    "tests/",
]
xfail_strict=true
