[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py39']


[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplemented",
    "raise NotImplementedError",
]
fail_under = 100
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["src/arti/internal/vendored/*" ]
source = ["arti"]


[tool.isort]
line_length = 100
profile = "black"


[tool.mypy]
explicit_package_bases = true
files = "docs/,src/,tests/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/stubs"
namespace_packages = true
strict = true

[[tool.mypy.overrides]]
module = ["gcp_storage_emulator.*", "gcsfs", "pyarrow", "sh", ]
ignore_missing_imports = true


[tool.poetry]
name = "arti"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["Jacob Hayes <jacob.r.hayes@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/artigraph/artigraph"
repository = "https://github.com/artigraph/artigraph"
include = ["src/arti/py.typed"]

[tool.poetry.dependencies]
gcsfs = "^2022.2.0"
multimethod = "^1.6"
parse = "^1.19.0"
pyarrow = "^8.0.0"
pydantic = "^1.9.0"
pyfarmhash = ">=0.2.2,<0.4.0"
python = "^3.9"
python-box = ">=5.4.1,<7.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "22.3.0"
blacken-docs = "^1.12.1"
coverage = {version = "^6.4", extras = ["toml"]} # pyproject.toml support
flake8 = "4.0.1"
gcp-storage-emulator = "^2022.6.11"
ipdb = "^0.13.9"
ipython = "^8.4.0"
isort = "5.10.1"
mypy = "0.961"
pdocs = {git = "https://github.com/JacobHayes/pdocs.git", rev = "master"} # Fix GenericAlias error https://github.com/timothycrosley/pdocs/pull/29
portray = "^1.7.0"
pre-commit = "2.19.0"
pylint = "^2.14.3"
pytest = "7.1.2"
pytest-benchmark = "3.4.1"
pytest-cov = "3.0.0"
pytest-sugar = "0.9.4"
pyupgrade = "^2.34.0"
sh = "^1.14.2"
truffleHog = "^2.2.1"
typer = "^0.4.1"
types-pyfarmhash = "^0.2.3"


[tool.portray.mkdocs]
edit_uri = 'edit/golden/'


[tool.pylint.format]
max-line-length = "100"

[tool.pylint.master]
extension-pkg-whitelist = [
    "farmhash",
    "pyarrow",
    "pydantic",
]

[tool.pylint.message_control]
docstring-min-length=10
disable = """
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    no-self-use,
    redefined-builtin,
    too-few-public-methods,
    unsubscriptable-object,
"""

[tool.pylint.TYPECHECK]
generated-members="sh"


[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --no-cov-on-fail"
filterwarnings = [
    "error",
    # Ignore gcsfs unclosed session - https://github.com/fsspec/gcsfs/pull/452
    "ignore:unclosed <ssl.SSLSocket:ResourceWarning:gcsfs",
]
testpaths = [
    "src/",
    "tests/",
]
xfail_strict=true
